--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "apipetshopnodejs",
   "version": "1.0.0",
-  "description": "crud com banco de dados. O tema é, obviamente, pet shop",
+  "description": "Projeto para estudos PetShop",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
@@ -10,17 +10,19 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JoaoPires505/APIPetShopNodeJS.git"
+    "url": "git+https://github.com/GodTigas/APIPetShopNodeJs.git"
   },
-  "author": "",
+  "author": "Tigas",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/JoaoPires505/APIPetShopNodeJS/issues"
+    "url": "https://github.com/GodTigas/APIPetShopNodeJs/issues"
   },
-  "homepage": "https://github.com/JoaoPires505/APIPetShopNodeJS#readme",
+  "homepage": "https://github.com/GodTigas/APIPetShopNodeJs#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
-    "express": "4.18.2",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "sequelize": "^6.33.0"
   },
